--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <meta property="og:description" content="Undangan Pernikahan Bagus & Intan">
     <meta property="og:keywords"
         content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan">
-    <meta property="og:image" content="https://ulems.my.id/assets/images/duo.jpg">
-    <meta property="og:image:secure_url" content="https://ulems.my.id/assets/images/duo.jpg">
+    <meta property="og:image" content="https://invitationbi.github.io/Invitation_B-I/assets/images/bgdepancrop.jpg">
+<!--     <meta property="og:image:secure_url" content="https://ulems.my.id/assets/images/duo.jpg">
     <meta property="og:image:type" content="image/jpeg">
-    <meta property="og:image:alt" content="Undangan Pernikahan Bagus & Intan">
-    <meta property="og:type" content="website">
-    <meta property="og:locale" content="id_ID">
-    <meta property="og:url" content="https://ulems.my.id">
+    <meta property="og:image:alt" content="Undangan Pernikahan Bagus & Intan"> -->
+<!--     <meta property="og:type" content="website">
+    <meta property="og:locale" content="id_ID"> -->
+    <meta property="og:url" content="https://invitationbi.github.io/Invitation_BagusIntan/">
     <meta property="og:site_name" content="Undangan Pernikahan Bagus & Intan">
 
     <!-- Appearance -->
@@ -34,7 +34,7 @@
     <meta name="apple-mobile-web-app-title" content="Undangan Pernikahan Bagus & Intan">
     <meta name="theme-color" content="#111111">
     <meta name="color-scheme" content="dark">
-    <link rel="canonical" href="https://ulems.my.id/">
+    <link rel="canonical" href="https://invitationbi.github.io/Invitation_BagusIntan/">
     <link rel="shortcut icon" type="image/x-icon" href="https://ulems.my.id/favicon.ico">
     <link rel="apple-touch-icon" sizes="192x192" type="image/png"
         href="https://ulems.my.id/assets/images/icon-192x192.png">
